# open_manipulator_pro_control

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml
launch/: cm_launch.py  dynamixel_control.launch.py  ros2_control.launch.py
