<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_pro_control</name>
  <version>0.0.0</version>
  <description>Package to bundle things related to the openMANIPULATOR-P control</description>
  <maintainer email="mateusmenezes95@gmail.com">Mateus Menezes</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>dynamixel_workbench</exec_depend>
  <exec_depend>dynamixel_workbench_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
